# pacman_bbox

./: .gitignore  .gitignore~  CMakeLists.txt  CMakeLists.txt~  README.md  TAZZA_prova.shl  bounding.cpp  dany  database.csv  doxygen.in  pacman_bbox.kdev4  test_build_database.sh  test_build_database_populated.sh
.kdev4/: pacman_bbox.kdev4
ADAMS/PISA_IIT_SOFT_HAND_TEMPLATE/: PISAIIT_HAND.cmd  TAZZA.shl  distal.shl  mid.shl  palm.shl  pot.shl  pot2.shl  prox.shl  prox_thumb.shl
ADAMS/PISA_IIT_SOFT_HAND_TEMPLATE/scripts_and_useful_info/: Geometry_info.pptx  modify_hand_geometry.cmd
examples/: BoundingBox.cpp
include/: pacman_bb.hpp  pacman_bb_utils.hpp
input_files/: PIATTO_c++.shl  collander_c++.shl  kettle.shl  pot.shl  pot2_uniform.stl  pot_c++.shl  projectionxy.txt
scripts/: build_database.sh  build_database_pupulated.sh
src/: BoundingBox.cpp  BoundingBox_all.cpp  BoundingBox_populated.cpp  bounding.cpp  bounding_eigen.cpp  bounding_eigen_cycle.cpp  code.cpp  code_prova.cpp  pacman_bb.cpp  pacman_bb_utils.cpp  prova_D  prova_d.cpp  test_pca.cpp
test/: PCA_test.m  bounding.cpp  bounding_eigen_cycle.cpp  code.cpp  load_mesh.cpp  old.cpp  prova1.cpp  prova_d.cpp  test.cpp  testPCL.cpp  test_pca.cpp
visualization/: ACFGenerator.m  ACFSecondPart.m  CMDGenerator.m  DRILL2.shl  Deep_Exploration.m  Import_PLY.m  PCA_test.m  PROVA1.cmd  ROTX.m  ROTZ.m  Res.txt  To_Bounding_Box._new.m  To_Bounding_Box.m  To_Bounding_box_adams.asv  To_Bounding_box_adams.m  Transformations_for_CollisionDetector.txt  adams_point_DANY.m  adams_point_prova_dany.m  adams_points_dany.m  adams_points_new.m  bounding_box_plots.m  bounding_box_plots_dany.m  box_1_pot_acf.m  cmd_acf_editor.m  controllo.mat  cup.shl  deep_ACFGenerator.m  deep_CMDGenerator.m  deep_sim_info.mat  eulero_angle.m  generate_variations.asv  generate_variations.m  generation_point.asv  import_bbox_results.m  import_shl.m  import_subpoints.m  importfile.m  info_info_collander.mat  isCollision.m  isCollisionHand.m  (+39 more)
visualization/old_dany_code/: adams_point_dany1.m  adams_points_dany.m  adams_points_new.m  bounding_box_plots_pot.m
